apps/backend/overlays/prod/statefulsets-prod-patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: backend-postgres
spec:
  template:
    spec:
      nodeSelector:
        kubernetes.io/hostname: rpwowru
      containers:
        - name: postgres
          image: postgres:17-alpine
  volumeClaimTemplates:
    - metadata:
        name: postgres-data
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: local-path
        resources:
          requests:
            storage: 10Gi
        volumeMode: Filesystem
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rabbitmq
spec:
  template:
    spec:
      nodeSelector:
        kubernetes.io/hostname: rpwowru
  volumeClaimTemplates:
    - metadata:
        name: rabbitmq-data
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: local-path
        resources:
          requests:
            storage: 2Gi
        volumeMode: Filesystem
