apps/backend/overlays/prod/ru-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway-ru-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: ru.rp-wow.ru
      http:
        paths:
          - path: /api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: api-gateway-service-dotnet-service
                port:
                  number: 8080
  tls:
    - hosts:
        - ru.rp-wow.ru
      secretName: ru-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-ru-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: ru.rp-wow.ru
      http:
        paths:
          - path: /_auth(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth-service-dotnet-service
                port:
                  number: 8080
  tls:
    - hosts:
        - ru.rp-wow.ru
      secretName: ru-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: launcher-ru-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  rules:
    - host: launcher.ru.rp-wow.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: launcher-service-dotnet-service
                port:
                  number: 8080
  tls:
    - hosts:
        - launcher.ru.rp-wow.ru
      secretName: launcher-ru-tls
